
PropertyFileLabelIncrementer:
----------------------
* New plug-in that returns the label from a properties file (CC-242). Submitted by Eugene Kuleshov

WeblogPublisher:
----------------------
* New plug-in for publishing build results to a weblog (CC-102). Submitted by Lasse Koskela

reporting application
======================

error.jsp:
----------------------
* change call from (GenericServlet.)log(...) to application.log(...) for app servers who implement Servlet without extending GenericServlet, such as WebLogic 8.x. Patch by Carl Lindberg

index.jsp:
----------------------
* cleanup display of page, add banding, one line per project. Submitted by Kevin Lawrence

main.jsp:
----------------------
* add "charset=utf-8" to contentType (CC-176).

CruiseControl Release Notes - 2.4

batch files:
----------------------
* Double quotes around %JAVA_HOME% arguments in classpaths, for JAVA_HOME values with spaces in the paths. (CC-371) Fix by Jeff Jensen

binary release:
----------------------
* cruisecontrol.bat no longer sets ANT_HOME (CC-348).
* cruisecontrol reporting application now started under root context, for example http://localhost:8080 will now show the reporting app. "cruisecontrol" context supported For backwards compatability, for example http://localhost:8080/cruisecontrol. Patch by Kent Spillner.
* switched from jakarta commons-math to a sample "connectfour" project in the cruisecontrol cvs repository.
* Added a work directory for Jetty to use (CC-257). Fix suggested by Paul Hammant.
* Defaulting jmxport to 8000 in the startup scripts (cruisecontrol.bat and cruisecontrol.sh), but at the end of the command line so that it can be easily overridden.
* Package the zip file with unix execute permission on the cruisecontrol.sh and apache-ant/bin/ant scripts
* Updated the bundled apache-ant from version 1.6.3 to 1.6.5

source release:
----------------------
* don't exclude the binaryrelease files from the source release. Patch by Larry Shatzer

contrib: