@@ -1,0 +1,159 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html>
+<head>
+   <title>CruiseControl Build Results JSP Installation Guide</title>
+   <style type="text/css" media="all">
+       @import "../../../docs/cruisecontrol.css";
+   </style>
+   <link href="../../../docs/print.css" type="text/css" rel="stylesheet" media="print"/>
+</head>
+<body>
+<div class="header">
+    <div class="hostedby">
+        Hosted By:<br/>
+        <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=23523&amp;type=1" width="88" height="31" alt="SourceForge"/></a>
+    </div>
+    <img alt="CruiseControl" src="../../../docs/banner.png"/>
+</div>
+<div class="container">&nbsp;
+    <div id="menu">
+        <ul id="menulist">
+            <li><a href="../../../docs/index.html">home</a></li>
+            <li><a href="../../../docs/download.html">download</a></li>
+            <li><a href="../../../docs/license.html">license</a></li>
+            <li><h2>documentation</h2></li>
+            <li><a href="../../../docs/overview.html">overview</a></li>
+            <li><a class="expandmenu" href="../../../main/docs/index.html">build loop</a></li>
+            <li><a class="expandedmenu" href="index.html">results jsp</a>
+                <ul>
+                    <li><a href="install.html">install</a></li>
+                    <li><p id="menuselected">customization</p></li>
+                </ul>
+            </li>
+            <li><a class="expandmenu" href="../../../docs/gettingstarted.html">getting started</a></li>
+            <li><a href="../../../main/docs/configxml.html">config ref</a></li>
+            <li><a href="../../../docs/faq.html">faq</a></li>
+            <li><a class="external" href="http://confluence.public.thoughtworks.org/display/CC/Home">wiki</a></li>
+            <li><h2>contributing</h2></li>
+            <li><a class="expandmenu" href="../../../docs/developers.html">developers</a></li>
+            <li><a href="../../../docs/contact.html">mailing lists</a></li>
+            <li><a href="../../../docs/cvs.html">cvs repository</a></li>
+            <li><p id="menubottom">Release: %%VERSION%%</p></li>
+        </ul>
+    </div>
+    <div class="content">
+        <h1><span class="printonly">CruiseControl</span> Build Results JSP Customization</h1>
+
+        <h2>Build parameters</h2>
+        <p>Three configuration settings are specified when building the reporting applications. See the
+        <a href="install.html#Building">Building</a> section of the Installation Guide</p>
+
+        <h2>System properties</h2>
+        <p>The binary release uses System properties to pass the value of commandline arguments from the main
+        CruiseControl process to the Reporting application.</p>
+
+        <dl>
+            <dt>ccname</dt>
+            <dd>Name for this CruiseControl instance</dd>
+            <dd class="default-value">The binaryrelease sets this to the <code>-ccname</code> value given as a
+            commandline argument</dd>
+
+            <dt>cruisecontrol.jmxport</dt>
+            <dd>port where the CruiseControl JMX agent's HTTP adaptor is listening. If specified enables the force
+            button on the index page.</dd>
+            <dd class="default-value">The binaryrelease sets this to the <code>-jmxport</code> value given as a
+            commandline argument (by default 8000)</dd>
+
+            <dt>cruisecontrol.rmiport</dt>
+            <dd>port where CruiseControl JMX agent's RMI adaptor is listening. If specified enables the experimental
+            configuration editor.</dd>
+            <dd class="default-value">The binaryrelease sets this to the <code>-rmiport</code> value given as a
+            commandline argument</dd>
+        </dl>
+
+        <h2>Deployment descriptor (web.xml)</h2>
+
+        <p>The JSP reporting application uses context parameters and servlet init parameters configuration and
+        customization. These parameters can be edited in the web.xml file directly. Some Web Containers like
+        <a class="external" href="http://tomcat.apache.org/tomcat-5.5-doc/config/context.html#Context%20Parameters">
+        Tomcat</a> allow the default values to be override without changing the <code>web.xml</code> or the
+        <code>war</code> file.
+        </p>
+
+        <h3>Context parameters</h3>
+        <dl>
+            <dt>cacheRoot</dt>
+            <dd>Full path to a directory where caches of XSL transformations are written. The web context must have
+                permission to write to this directory. If not specified, caches will be written in a subdir called
+                _cache of the <code>logDir</code></dd>
+            <dd class="default-value">The binaryrelease does not specifiy this parameter</dd>
+
+            <dt>logDir</dt>
+            <dd>This should be the full path to your CruiseControl log directory. If you are in single project mode,
+                this will contain only the logs for your project. If you are in multi-project mode, it is expected that
+                you will have multiple sub-directories inside this log directory, one for each project.</dd>
+            <dd class="default-value">The default default value is the build parameter <code>user.log.dir</code>. The
+                binary release sets this to <code>logs</code></dd>
+
+            <dt>singleProject</dt>
+            <dd>Indicates if the CruiseControl instance is to report on only one project. If it is, then you should set
+                this to true.</dd>
+            <dd class="default-value">The default value is <code>false</code></dd>
+            
+            <dt>currentBuildStatusFile</dt>
+            <dd>This should be the name to your current build status file as generated by the currentbuildstatuslistener,
+                which is located to the projects log directory.</dd>
+            <dd class="default-value">The default default value is the build parameter <code>user.build.status.file</code>.
+                The binary release sets this to <code>status.txt</code></dd>
+
+            <dt>fileServlet.welcomeFiles</dt>
+            <dd>The list of space separated index files that should be automatically displayed
+                when browsing a directory displayed by the file servlet. The order matters.
+                Let empty or comment out to disable indexes.</dd>
+            <dd class="default-value">The default values are: <code>index.htm index.html</code></dd>
+
+            <dt>xslt.*</dt>
+            <dd>any context parameter that starts with <code>xslt.</code> will be pass to the XSL stylesheets as a XSLT
+                paramater withou the <code>xslt.</code> prefix. See <a href="#XSLT_parameters">XSLT parameters</a></dd>
+        </dl>
+
+        <h3>Servlet init-param</h3>
+        <p>Beside the context parameters the <code>ArtifactServlet</code> takes an init parameter</p>
+        <dl>
+            <dt>rootDir</dt>
+            <dd>The absolute path to the directory where additional build artifacts are stored. If this is not specified
+                the <code>logDir</code> context parameter will be used</dd>
+            <dd class="default-value">The default default value is the build parameter
+                <code>cruise.build.artifacts.dir</code>. The binary release sets this to <code>artifacts</code></dd>
+        </dl>
+
+        <h2 id="XSLT_parameters">XSLT parameters</h2>
+        <p>Some of the XSL stylesheets can be configured using XSLT parameters. These parameters are configured as
+        context parameters with a <code>xslt.</code> prefix, that is XSLT Parameter <code>viewcvs.url</code> is
+        configured a context parameter <code>xslt.viewcvs.url</code></p>
+        <dl>
+          <dt>pmd.warning.threshold</dt>
+          <dd>PMD violations with a priority below this threshold are considered warnings and are only reported by the
+              total count on the build results page.
+          </dd>
+          <dd class="default-value">This is not specified by default</dd>
+
+          <dt>viewcvs.url</dt>
+          <dd>The URL of the ViewCVS website used by cvstagdiff.xsl, checkstyle-details.xsl and pmd-details.xsl</dd>
+          <dd class="default-value">This is not specified by default</dd>
+
+          <dt>cvstagdiff.success.show</dt>
+          <dd>Controls whether the ViewCVS differences report should be shown when the build was successful. The default
+              is to only show the modifications report for broken builds</dd>
+          <dd class="default-value">true</dd>
+
+          <dt>checkstyle.hide.warnings</dt>
+          <dd>Controls whether only CheckStyle errors or all CheckStyle errors and warnings should be listed on the
+              build results page. Set to 'true' for hiding the warnings. The default is to list all errors and warnings.
+          </dd>
+          <dd class="default-value">This is not specified by default</dd>
+        </dl>
+    </div>
+</div>
+</body>
+</html>
